# EIVC

./: CMakeLists.txt  Genin.cpp  Genin.h  Goku.cpp  Goku.h  Kage.cpp  Kage.h  Ninja.cpp  Ninja.h  Persona.cpp  Persona.h  README.md  Sanin.cpp  Sanin.h  Tecnicas.cpp  Tecnicas.h  Transformaciones.cpp  Transformaciones.h  main.cpp
