cmake_minimum_required(VERSION 3.27)
project(EIVC)

set(CMAKE_CXX_STANDARD 17)

add_executable(EIVC main.cpp
        Persona.h
        Persona.cpp
        Ninja.h
        Ninja.cpp
        Genin.h
        Genin.cpp
        Sanin.cpp
        Sanin.h
        Kage.h
        Kage.cpp
        Transformaciones.cpp
        Transformaciones.h
        Tecnicas.h
        Tecnicas.cpp
        Goku.h
        Goku.cpp
        Goku.cpp
)
